внесла правки от наставника 17.03.2020

--- a/index.html
+++ b/index.html
@@ -256,7 +256,10 @@
                             <h4 class="review__title">Константин Спилберг</h4>
                             <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             <div class="btn btn--black">
-                                <button class="btn__link">Подробнее</button>
+                                <button class="btn__link">
+                                    <p class="btn__text-d">Подробнее</p>
+                                    <p class="btn__text-m">Читать отзыв</p>
+                                </button>
                             </div>
                         </div>
                     </li>
@@ -268,7 +271,10 @@
                             <h4 class="review__title">Константин Спилберг</h4>
                             <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             <div class="btn btn--black">
-                                <button class="btn__link" >Подробнее</button>
+                                <button class="btn__link">
+                                    <p class="btn__text-d">Подробнее</p>
+                                    <p class="btn__text-m">Читать отзыв</p>
+                                </button>
                             </div>
                         </div>
                     </li>
@@ -280,7 +286,10 @@
                             <h4 class="review__title">Константин Спилберг</h4>
                             <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             <div class="btn btn--black">
-                                <button class="btn__link">Подробнее</button>
+                                <button class="btn__link">
+                                    <p class="btn__text-d">Подробнее</p>
+                                    <p class="btn__text-m">Читать отзыв</p>
+                                </button>
                             </div>
                         </div>
                     </li>
@@ -292,7 +301,10 @@
                             <h4 class="review__title">Константин Спилберг</h4>
                             <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             <div class="btn btn--black">
-                                <button class="btn__link">Подробнее</button>
+                                <button class="btn__link">
+                                    <p class="btn__text-d">Подробнее</p>
+                                    <p class="btn__text-m">Читать отзыв</p>
+                                </button>
                             </div>
                         </div>
                     </li>
@@ -304,7 +316,10 @@
                             <h4 class="review__title">Константин Спилберг</h4>
                             <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             <div class="btn btn--black">
-                                <button class="btn__link">Подробнее</button>
+                                <button class="btn__link">
+                                    <p class="btn__text-d">Подробнее</p>
+                                    <p class="btn__text-m">Читать отзыв</p>
+                                </button>
                             </div>
                         </div>
                     </li>
@@ -316,7 +331,10 @@
                             <h4 class="review__title">Константин Спилберг</h4>
                             <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             <div class="btn btn--black">
-                                <button class="btn__link">Подробнее</button>
+                                <button class="btn__link">
+                                    <p class="btn__text-d">Подробнее</p>
+                                    <p class="btn__text-m">Читать отзыв</p>
+                                </button>
                             </div>
                         </div>
                     </li>
@@ -328,7 +346,10 @@
                             <h4 class="review__title">Константин Спилберг</h4>
                             <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             <div class="btn btn--black">
-                                <button class="btn__link">Подробнее</button>
+                                <button class="btn__link">
+                                    <p class="btn__text-d">Подробнее</p>
+                                    <p class="btn__text-m">Читать отзыв</p>
+                                </button>
                             </div>
                         </div>
                     </li>
@@ -340,7 +361,10 @@
                             <h4 class="review__title">Константин Спилберг</h4>
                             <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             <div class="btn btn--black">
-                                <button class="btn__link">Подробнее</button>
+                                <button class="btn__link">
+                                    <p class="btn__text-d">Подробнее</p>
+                                    <p class="btn__text-m">Читать отзыв</p>
+                                </button>
                             </div>
                         </div>
                     </li>
@@ -419,7 +443,7 @@
 
                             <div class="order__row">
                                 <div class="btn">
-                                    <button class="btn__link">Заказать</button>
+                                    <submit class="btn__link">Заказать</submit>
                                 </div>
                                 <div class="btn btn--clear">
                                     <button type="reset" class="btn__link">Очистить</button>
@@ -460,10 +484,14 @@
                             <p class="footer__address">Санкт-Петербург, ул. Бабушкина, д. 12/1, 15</p>
                             <div class="footer__phone">
                                 <a href="#" class="footer__number">
-                                    <svg preserveAspectRatio="xMinYMid meet" class="footer__svg" width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 -1 15 15">
-                                        <use xlink:href="/icons/sprite.svg#phone"></use>
-                                    </svg>
-                                    +7 (812) 377-13-77
+                                    <div class="footer__icon">
+                                        <svg preserveAspectRatio="xMinYMid meet" class="footer__svg" width="15" height="15" xmlns="http://www.w3.org/2000/svg" viewBox="0 -1 15 15">
+                                            <use xlink:href="/icons/sprite.svg#phone"></use>
+                                        </svg>
+                                    </div>
+                                    <p class="footer__text">
+                                        +7 (812) 377-13-77
+                                    </p>
                                 </a>
                             </div>
                         </div>
