внесла правки от наставника 18.03.2020

--- a/index.html
+++ b/index.html
@@ -214,6 +214,8 @@
                                 </h4>
                             </div>
                             <p class="menu-section__text">
+                                <a class="close-btn" id="close-btn" href="#">                          
+                                </a>
                                 Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр.
     Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.
                             </p>
@@ -226,6 +228,8 @@
                             </div>
                             
                             <p class="menu-section__text">
+                                <a class="close-btn" id="close-btn" href="#">                          
+                                </a>
                                 Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр.
     Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.
                             </p>
@@ -238,6 +242,8 @@
                             </div>
                             
                             <p class="menu-section__text">
+                                <a class="close-btn" id="close-btn" href="#">                          
+                                </a>
                                 Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр.
     Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.
                             </p>
@@ -257,8 +263,8 @@
                             <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             <div class="btn btn--black">
                                 <button class="btn__link">
-                                    <p class="btn__text-d">Подробнее</p>
-                                    <p class="btn__text-m">Читать отзыв</p>
+                                    <span class="btn__text-d">Подробнее</span>
+                                    <span class="btn__text-m">Читать отзыв</span>
                                 </button>
                             </div>
                         </div>
@@ -272,8 +278,8 @@
                             <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             <div class="btn btn--black">
                                 <button class="btn__link">
-                                    <p class="btn__text-d">Подробнее</p>
-                                    <p class="btn__text-m">Читать отзыв</p>
+                                    <span class="btn__text-d">Подробнее</span>
+                                    <span class="btn__text-m">Читать отзыв</span>
                                 </button>
                             </div>
                         </div>
@@ -287,8 +293,8 @@
                             <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             <div class="btn btn--black">
                                 <button class="btn__link">
-                                    <p class="btn__text-d">Подробнее</p>
-                                    <p class="btn__text-m">Читать отзыв</p>
+                                    <span class="btn__text-d">Подробнее</span>
+                                    <span class="btn__text-m">Читать отзыв</span>
                                 </button>
                             </div>
                         </div>
@@ -302,8 +308,8 @@
                             <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             <div class="btn btn--black">
                                 <button class="btn__link">
-                                    <p class="btn__text-d">Подробнее</p>
-                                    <p class="btn__text-m">Читать отзыв</p>
+                                    <span class="btn__text-d">Подробнее</span>
+                                    <span class="btn__text-m">Читать отзыв</span>
                                 </button>
                             </div>
                         </div>
@@ -317,8 +323,8 @@
                             <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             <div class="btn btn--black">
                                 <button class="btn__link">
-                                    <p class="btn__text-d">Подробнее</p>
-                                    <p class="btn__text-m">Читать отзыв</p>
+                                    <span class="btn__text-d">Подробнее</span>
+                                    <span class="btn__text-m">Читать отзыв</span>
                                 </button>
                             </div>
                         </div>
@@ -332,8 +338,8 @@
                             <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             <div class="btn btn--black">
                                 <button class="btn__link">
-                                    <p class="btn__text-d">Подробнее</p>
-                                    <p class="btn__text-m">Читать отзыв</p>
+                                    <span class="btn__text-d">Подробнее</span>
+                                    <span class="btn__text-m">Читать отзыв</span>
                                 </button>
                             </div>
                         </div>
@@ -347,8 +353,8 @@
                             <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             <div class="btn btn--black">
                                 <button class="btn__link">
-                                    <p class="btn__text-d">Подробнее</p>
-                                    <p class="btn__text-m">Читать отзыв</p>
+                                    <span class="btn__text-d">Подробнее</span>
+                                    <span class="btn__text-m">Читать отзыв</span>
                                 </button>
                             </div>
                         </div>
@@ -362,8 +368,8 @@
                             <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             <div class="btn btn--black">
                                 <button class="btn__link">
-                                    <p class="btn__text-d">Подробнее</p>
-                                    <p class="btn__text-m">Читать отзыв</p>
+                                    <span class="btn__text-d">Подробнее</span>
+                                    <span class="btn__text-m">Читать отзыв</span>
                                 </button>
                             </div>
                         </div>
@@ -443,7 +449,7 @@
 
                             <div class="order__row">
                                 <div class="btn">
-                                    <submit class="btn__link">Заказать</submit>
+                                    <button type="submit" class="btn__link">Заказать</button>
                                 </div>
                                 <div class="btn btn--clear">
                                     <button type="reset" class="btn__link">Очистить</button>
