--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@
                                     <button type="submit" id="submit" class="btn__link">Заказать</button>
                                 </div>
                                 <div class="btn btn--clear">
-                                    <button type="reset" class="btn__link">Очистить</button>
+                                    <button type="reset" id="reset" class="btn__link">Очистить</button>
                                 </div>
                             </div>
                             <div id="result"></div>
@@ -986,6 +986,7 @@
         </div>
       </script>
 
+    <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/hamburger-menu.js"></script>
     <script src="js/accordions.js"></script>
     <script src="js/form.js"></script>
