исправлены баги с js

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mr. Burger</title>
 
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=7f07cea9-2d98-42ff-9813-69e86f9f8f5c&lang=ru_RU"></script>
+
     <link rel="stylesheet" href="styles/main.min.css">
 </head>
 <body>
@@ -56,7 +58,7 @@
                         </div>
                         <div class="header__right">
                             <div class="btn">
-                                <button class="btn__link">Заказать</button>
+                                <button data-scroll-to="7" class="btn__link">Заказать</button>
                             </div>
                         </div>
                         <a href="#" id="hamburger-menu" class="hamburger-menu">
