--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mr. Burger</title>
-
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=7f07cea9-2d98-42ff-9813-69e86f9f8f5c&lang=ru_RU"></script>
     <link rel="stylesheet" href="styles/main.min.css">
 </head>
 <body>
@@ -46,7 +46,7 @@
                                             <a class="primary-menu__link" data-scroll-to="6" href="#">Как мы работаем</a>
                                         </li>
                                         <li class="primary-menu__item">
-                                            <a class="primary-menu__link" data-scroll-to="7" href="#contacts">Контакты</a>
+                                            <a class="primary-menu__link" data-scroll-to="8" href="#contacts">Контакты</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -56,7 +56,7 @@
                         </div>
                         <div class="header__right">
                             <div class="btn">
-                                <button class="btn__link">Заказать</button>
+                                <button class="btn__link" data-scroll-to="7">Заказать</button>
                             </div>
                         </div>
                         <a href="#" id="hamburger-menu" class="hamburger-menu">
@@ -257,7 +257,7 @@
                                             <p class="slider__price">500</p>
                                             <p class="slider__currency">рублей</p>
                                             <div class="btn">
-                                                <button type="submit" class="btn__link">Заказать</button>
+                                                <button type="submit" data-scroll-to="7" class="btn__link">Заказать</button>
                                             </div>
                                         </div>
                                     </div>
@@ -360,7 +360,7 @@
                                             <p class="slider__price">500</p>
                                             <p class="slider__currency">рублей</p>
                                             <div class="btn">
-                                                <button type="submit" class="btn__link">Заказать</button>
+                                                <button type="submit" data-scroll-to="7" class="btn__link">Заказать</button>
                                             </div>
                                         </div>
                                     </div>
@@ -463,7 +463,7 @@
                                             <p class="slider__price">500</p>
                                             <p class="slider__currency">рублей</p>
                                             <div class="btn">
-                                                <button type="submit" class="btn__link">Заказать</button>
+                                                <button type="submit" data-scroll-to="7" class="btn__link">Заказать</button>
                                             </div>
                                         </div>
                                     </div>
