--- a/src/index.html
+++ b/src/index.html
@@ -766,7 +766,7 @@
                     <div class="videoplayer__container">
                         <div class="videoplayer">
                             <div class="videoplayer__wrapper">
-                                <video id="videoplayer-html" width="600" height="400">
+                                <video id="videoplayer-html" width="100%" height="auto">
                                     <source src="burger_video.mp4">
                                 </video>
                                 <div class="videoplayer__splash">
