js changes, fixed accordions bugs

--- a/src/index.html
+++ b/src/index.html
@@ -827,7 +827,7 @@
                                 </label>
                                 <label class="order__block">
                                     <div class="order__title">Телефон</div>
-                                    <input class="order__input" name="phone" type="tel" required>
+                                    <input class="order__input" name="phone" type="text" required>
                                     <div class="order__error"></div>
                                 </label>
                             </div>
